# aisle

./: .gitignore  AGENTS.md  Cargo.toml  README.md  data.parquet  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
benches/: README.md  read_bench.rs  reader.rs  row_group_pruning.rs
benches/df_compare/: Cargo.toml  README.md
benches/df_compare/benches/: bloom_filter.rs  compare.rs  dictionary_hints.rs  metadata_eval.rs  point_query.rs  projection.rs
benches/df_compare/results/: dictionary_hints_baseline.md  dictionary_hints_measured_impact.md  dictionary_hints_provider_optimization.md  projection_pushdown.md
docs/: architecture.md  benchmark.md  benchmark_baselines.md  benchmark_design.md  benchmark_results.md  deep_dive_datafusion_parquet_vs_aisle.md  development_plan.md  projection_pushdown_api.md
examples/: basic_usage.rs  bloom_filter.rs  byte_array_ordering.rs  reader.rs  row_filter.rs
src/: compile.rs  error.rs  expr.rs  ir.rs  lib.rs  pruner.rs  result.rs  row_filter.rs  selection.rs
src/expr/: rewrite.rs
src/ord/: mod.rs
src/prune/: api.rs  between.rs  bloom.rs  cmp.rs  context.rs  dictionary.rs  eval.rs  in_list.rs  is_null.rs  mod.rs  options.rs  page.rs  provider.rs  request.rs  result.rs  starts_with.rs  stats.rs  strings.rs
src/reader/: filter.rs  mod.rs  predicate.rs
tests/: async_bloom.rs  async_bloom_provider.rs  best_effort_pruning.rs  bloom_filter.rs  bloom_injection_integration.rs  bloom_provider.rs  cast_support.rs  datafusion_column_test.rs  decimal_support.rs  dictionary_hints.rs  int96_support.rs  int_family_support.rs  interval_support.rs  large_dataset_test.rs  null_count_edge_cases.rs  projection_pushdown.rs  prune_integration.rs  prune_like.rs  prune_list_map.rs  prune_nested.rs  temporal_support.rs  time_support.rs
