[package]
name = "aisle"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-schema = "57.1.0"
bytes = "1.11.0"
datafusion-common = "51.0.0"
datafusion-expr = "51.0.0"
parquet = { version = "57.1.0", default-features = false, features = ["arrow", "async"] }
roaring = "0.11.3"
thiserror = "2.0"

[dev-dependencies]
arrow-array = "57.1.0"
arrow-buffer = "57.1.0"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt"] }
