[package]
name = "aisle-df-compare"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aisle = { path = "../..", features = ["datafusion"] }
arrow-array = "57.1.0"
arrow-schema = "57.1.0"
bytes = "1.11.0"
datafusion-common = { version = "51.0.0", features = ["parquet"] }
datafusion = { version = "51.0.0", features = ["parquet"] }
datafusion-expr = "51.0.0"
datafusion-physical-expr = "51.0.0"
datafusion-pruning = "51.0.0"
futures = "0.3"
parquet = { version = "57.1.0", default-features = false, features = ["arrow", "async"] }
rand = "0.8"
tempfile = "3.15.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "fs"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "metadata_eval"
harness = false

[[bench]]
name = "point_query"
harness = false

[[bench]]
name = "bloom_filter"
harness = false

[[bench]]
name = "dictionary_hints"
harness = false
